# face-to-face

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_code.yaml
f2f/: __init__.py
f2f/core/: __init__.py  exceptions.py  onnx.py
f2f/detection/: README.md  __init__.py
f2f/detection/s3fd/: __init__.py  model.py  onnx.py
f2f/detection/scrfd/: __init__.py  onnx.py
f2f/detection/utils/: __init__.py
f2f/flame/: model.py
f2f/landmark/: README.md  __init__.py
f2f/landmark/synthetic/: __init__.py  model.py  onnx.py
f2f/mm/: README.md  __init__.py
f2f/mm/flame/: __init__.py  lbs.py  model.py  onnx.py  renderer.py  utils.py
f2f/mm/img2mm/: __init__.py
f2f/mm/img2mm/deca/: __init__.py  deca.py  emoca.py  mica.py  onnx.py
f2f/recognition/: __init__.py
f2f/recognition/arcface/: __init__.py  iresnet.py  model.py
f2f/segmentation/: README.md  __init__.py
f2f/segmentation/bisenet/: __init__.py  model.py  onnx.py
f2f/utils/: __init__.py  image.py  np_ops.py  onnx_ops.py  transforms_np.py  transforms_torch.py
