[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 80
exclude = '''
(
  /(
      build
    | tests
  )
)
'''

[tool.isort]
profile = "black"
line_length = 80
skip_glob = ["build/*"]

[tool.mypy]
files = ["f2f"]
exclude = '''(?x)(
  build
  |tests
)'''
show_error_context = "True"
show_column_numbers = "True"
show_error_codes = "True"
warn_no_return = "False"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
disallow_untyped_defs = "True"
pretty = "True"
follow_imports = "silent"
ignore_missing_imports = "True"

[tool.ruff]
ignore-init-module-imports = true
line-length = 80
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
    "S",  # see: https://pypi.org/project/flake8-bandit
]
extend-select = [
    "C4",  # see: https://pypi.org/project/flake8-comprehensions
    "SIM",  # see: https://pypi.org/project/flake8-simplify
    "PT",  # see: https://pypi.org/project/flake8-pytest-style
]

[tool.ruff.per-file-ignores]
"setup.py" = ["S605", "S607"]

[tool.pytest.ini_options]
addopts = "--cov --cov-config=.coveragerc"
filterwarnings = [
    "ignore:Call to deprecated create function FieldDescriptor",
    "ignore:Call to deprecated create function Descriptor",
    "ignore:Call to deprecated create function EnumDescriptor",
    "ignore:Call to deprecated create function EnumValueDescriptor",
    "ignore:Call to deprecated create function FileDescriptor",
    "ignore:Call to deprecated create function OneofDescriptor",
    "ignore:the imp module is deprecated in favour of importlib",
]
